fix overflow

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -265,7 +265,7 @@
 }
 @media print {
   .lh-devtools .lh-container {
-    height: inherit;
+    overflow: unset;
   }
 }
 .lh-devtools .lh-sticky-header {
